add swagger docs for emails and home controllers
