# api/controllers/emails.go
@@ -11,6 +11,15 @@ import (
 )
 
 // GetOutlookEmails returns the user's outlook emails.
+// @Summary Get Outlook Emails
+// @Description Retrieves emails from the user's Outlook account.
+// @Tags Emails
+// @Accept json
+// @Produce json
+// @Success 200 {array} outlook.Email "List of Outlook emails"
+// @Failure 302 {string} string "Redirect to Outlook authentication if the access token is missing or invalid"
+// @Failure 500 {string} string "Unable to retrieve emails due to server error or token retrieval issue"
+// @Router /emails/outlook [get]
 func GetOutlookEmails(c *fiber.Ctx) error {
 
 	emails, err := outlook.GetEmails()
@@ -36,7 +45,16 @@ func GetOutlookEmails(c *fiber.Ctx) error {
 	return c.JSON(emails)
 }
 
-// GetGmailEmails returns the user's outlook emails.
+// GetGmailEmails returns the user's Gmail emails.
+// @Summary Get Gmail Emails
+// @Description Retrieves emails from the user's Gmail account.
+// @Tags Emails
+// @Accept json
+// @Produce json
+// @Success 200 {array} gmail.Email "List of Gmail emails"
+// @Failure 302 {string} string "Redirect to Google authentication if the access token is missing or invalid"
+// @Failure 500 {string} string "Unable to retrieve emails due to server error or token retrieval issue"
+// @Router /emails/gmail [get]
 func GetGmailEmails(c *fiber.Ctx) error {
 	emails, err := gmail.GetEmails()
 
